RESOLVED FIXED 246699
[iOS] "text/uri-list" can't be read upon paste if the pasteboard set NSData for "public.url"
https://bugs.webkit.org/show_bug.cgi?id=246699
Summary [iOS] "text/uri-list" can't be read upon paste if the pasteboard set NSData f...
Wenson Hsieh
Reported 2022-10-18 11:01:41 PDT Comment hidden (obsolete)
Attachments
Wenson Hsieh
Comment 1 2022-10-18 11:33:03 PDT
Wenson Hsieh
Comment 2 2022-10-18 11:34:33 PDT
EWS
Comment 3 2022-10-18 16:43:24 PDT
Committed 255704@main (a035a72e61b9): <https://commits.webkit.org/255704@main> Reviewed commits have been landed. Closing PR #5504 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.